--- a/pages/corporate-profile.html
+++ b/pages/corporate-profile.html
@@ -14,7 +14,7 @@
 </head>
 <body>
   
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #e3f2fd;">
     <a class="navbar-brand" href="#">IPD-CRM</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -22,16 +22,16 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item active">
-          <a class="nav-link" href="./index.html">Home <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="../index.html">Home <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="./pages/corporate-profile.html">Corporate Profile</a>
+          <a class="nav-link" href="./corporate-profile.html">Corporate Profile</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="./pages/vision-and-mission.html">Vision & Mission</a>
+          <a class="nav-link" href="./vision-and-mission.html">Vision & Mission</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="./pages/application.html">Application</a>
+          <a class="nav-link" href="./application.html">Application</a>
         </li>
       </ul>
     </div>
