--- a/pages/vision-and-mission.html
+++ b/pages/vision-and-mission.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <!-- Author & Description -->
   <meta name="author" content="Usheninte Dangana">
-  <meta name="escription" content="IPD-CRM | Institute of Personality Development & Customer Relationship Management">
+  <meta name="escription" content="IPD-CRM | Institute of Personality Development & Customer Relationship Management. Customer Relationship Personified.">
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <title>IPD-CRM | Institute of Personality Development & Customer Relationship 
