--- a/pages/corporate-profile.html
+++ b/pages/corporate-profile.html
@@ -13,6 +13,8 @@
   Management</title>
 </head>
 <body>
+
+  <!-- Navbar -->
   
   <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #e3f2fd;">
     <a class="navbar-brand" href="#">IPD-CRM</a>
