--- a/pages/vision-and-mission.html
+++ b/pages/vision-and-mission.html
@@ -14,6 +14,8 @@
 </head>
 <body>
   
+  <!-- Navbar -->
+
   <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #e3f2fd;">
     <a class="navbar-brand" href="#">IPD-CRM</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
