--- a/index.html
+++ b/index.html
@@ -41,6 +41,54 @@
 
   <!-- Carousel -->
 
+  <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+    <ol class="carousel-indicators">
+      <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+      <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+      <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+      <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+      <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
+      <li data-target="#carouselExampleIndicators" data-slide-to="5"></li>
+      <li data-target="#carouselExampleIndicators" data-slide-to="6"></li>
+      <li data-target="#carouselExampleIndicators" data-slide-to="7"></li>
+      <li data-target="#carouselExampleIndicators" data-slide-to="8"></li>
+    </ol>
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img class="d-block w-100" src="./images/ipd-crm_CAROUSEL.png" alt="1st slide">
+      </div>
+      <div class="carousel-item">
+        <img class="d-block w-100" src="./images/ipd-crm_CAROUSEL.png" alt="2nd slide">
+      </div>
+      <div class="carousel-item">
+        <img class="d-block w-100" src="./images/ipd-crm_CAROUSEL.png" alt="3rd slide">
+      </div>
+      <div class="carousel-item">
+        <img class="d-block w-100" src="./images/ipd-crm_CAROUSEL.png" alt="4th slide">
+      </div>
+      <div class="carousel-item">
+        <img class="d-block w-100" src="./images/ipd-crm_CAROUSEL.png" alt="5th slide">
+      </div>
+      <div class="carousel-item">
+        <img class="d-block w-100" src="./images/ipd-crm_CAROUSEL.png" alt="6th slide">
+      </div>
+      <div class="carousel-item">
+        <img class="d-block w-100" src="./images/ipd-crm_CAROUSEL.png" alt="7th slide">
+      </div>
+      <div class="carousel-item">
+        <img class="d-block w-100" src="./images/ipd-crm_CAROUSEL.png" alt="8th slide">
+      </div>
+    </div>
+    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
+  </div>
+
   <!-- Bootstrap JS -->
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
