--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
   <meta name="description" content="IPD-CRM | Institute of Personality Development & Customer Relationship Management. Customer Relationship Personified.">
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+  <!-- LESSCSS | Stylesheet -->
+  <link rel="stylesheet/less" type="text/css" href="./css/styles.less" />
+  <script src="//cdnjs.cloudflare.com/ajax/libs/less.js/3.9.0/less.min.js" ></script>
   <title>IPD-CRM | Institute of Personality Development & Customer Relationship 
   Management</title>
 </head>
@@ -55,7 +58,7 @@
     </ol>
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img class="d-block w-100" src="./images/ipd-crm_CAROUSEL.png" alt="1st slide">
+        <img class="d-block w-100 img-fluid" src="./images/ipd-crm_CAROUSEL.png" alt="1st slide">
       </div>
       <div class="carousel-item">
         <img class="d-block w-100" src="./images/ipd-crm_CAROUSEL.png" alt="2nd slide">
