--- a/pages/vision-and-mission.html
+++ b/pages/vision-and-mission.html
@@ -9,6 +9,9 @@
   <meta name="description" content="IPD-CRM | Institute of Personality Development & Customer Relationship Management. Customer Relationship Personified.">
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+  <!-- LESSCSS | Stylesheet -->
+  <link rel="stylesheet/less" type="text/css" href="./css/styles.less" />
+  <script src="//cdnjs.cloudflare.com/ajax/libs/less.js/3.9.0/less.min.js" ></script>
   <title>IPD-CRM | Institute of Personality Development & Customer Relationship 
   Management</title>
 </head>
