--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     </ol>
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img class="d-block w-100 img-fluid" src="./images/ipd-crm_CAROUSEL.png" alt="1st slide">
+        <img class="d-block w-100" src="./images/ipd-crm_CAROUSEL.png" alt="1st slide">
       </div>
       <div class="carousel-item">
         <img class="d-block w-100" src="./images/ipd-crm_CAROUSEL.png" alt="2nd slide">
