--- a/index.html
+++ b/index.html
@@ -59,6 +59,14 @@
     <div class="carousel-inner">
       <div class="carousel-item active">
         <img class="d-block w-100" src="./images/ipd-crm_CAROUSEL.png" alt="1st slide">
+        <div class="carousel-caption d-none d-md-block">
+          <h3 class="slide-note">Discover the most satisfactory means to achieve self actualization in your private and public life</h3>
+          <p>.....</p>
+          <p>....</p>
+          <p>...</p>
+          <p>..</p>
+          <p>.</p>
+        </div>
       </div>
       <div class="carousel-item">
         <img class="d-block w-100" src="./images/ipd-crm_CAROUSEL.png" alt="2nd slide">
