--- a/index.html
+++ b/index.html
@@ -70,24 +70,80 @@
       </div>
       <div class="carousel-item">
         <img class="d-block w-100" src="./images/ipd-crm_CAROUSEL.png" alt="2nd slide">
+        <div class="carousel-caption d-none d-md-block">
+          <h3 class="slide-note">Discover the hidden aspect of your personality, accelerate success and popularity</h3>
+          <p>.....</p>
+          <p>....</p>
+          <p>...</p>
+          <p>..</p>
+          <p>.</p>
+        </div>
       </div>
       <div class="carousel-item">
         <img class="d-block w-100" src="./images/ipd-crm_CAROUSEL.png" alt="3rd slide">
+        <div class="carousel-caption d-none d-md-block">
+          <h3 class="slide-note">#</h3>
+          <p>.....</p>
+          <p>....</p>
+          <p>...</p>
+          <p>..</p>
+          <p>.</p>
+        </div>
       </div>
       <div class="carousel-item">
         <img class="d-block w-100" src="./images/ipd-crm_CAROUSEL.png" alt="4th slide">
+        <div class="carousel-caption d-none d-md-block">
+          <h3 class="slide-note">Discover the most satisfactory means to achieve self actualization in your private and public life</h3>
+          <p>.....</p>
+          <p>....</p>
+          <p>...</p>
+          <p>..</p>
+          <p>.</p>
+        </div>
       </div>
       <div class="carousel-item">
         <img class="d-block w-100" src="./images/ipd-crm_CAROUSEL.png" alt="5th slide">
+        <div class="carousel-caption d-none d-md-block">
+          <h3 class="slide-note">Discover the most satisfactory means to achieve self actualization in your private and public life</h3>
+          <p>.....</p>
+          <p>....</p>
+          <p>...</p>
+          <p>..</p>
+          <p>.</p>
+        </div>
       </div>
       <div class="carousel-item">
         <img class="d-block w-100" src="./images/ipd-crm_CAROUSEL.png" alt="6th slide">
+        <div class="carousel-caption d-none d-md-block">
+          <h3 class="slide-note">Discover the most satisfactory means to achieve self actualization in your private and public life</h3>
+          <p>.....</p>
+          <p>....</p>
+          <p>...</p>
+          <p>..</p>
+          <p>.</p>
+        </div>
       </div>
       <div class="carousel-item">
         <img class="d-block w-100" src="./images/ipd-crm_CAROUSEL.png" alt="7th slide">
+        <div class="carousel-caption d-none d-md-block">
+          <h3 class="slide-note">Discover the most satisfactory means to achieve self actualization in your private and public life</h3>
+          <p>.....</p>
+          <p>....</p>
+          <p>...</p>
+          <p>..</p>
+          <p>.</p>
+        </div>
       </div>
       <div class="carousel-item">
         <img class="d-block w-100" src="./images/ipd-crm_CAROUSEL.png" alt="8th slide">
+        <div class="carousel-caption d-none d-md-block">
+          <h3 class="slide-note">Discover the most satisfactory means to achieve self actualization in your private and public life</h3>
+          <p>.....</p>
+          <p>....</p>
+          <p>...</p>
+          <p>..</p>
+          <p>.</p>
+        </div>
       </div>
     </div>
     <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
