added slide caption

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
       <div class="carousel-item">
         <img class="d-block w-100" src="./images/ipd-crm_CAROUSEL.png" alt="3rd slide">
         <div class="carousel-caption d-none d-md-block">
-          <h3 class="slide-note">#</h3>
+          <h3 class="slide-note">Bridge the gap between your person and customer service delivery</h3>
           <p>.....</p>
           <p>....</p>
           <p>...</p>
