--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
       <div class="carousel-item">
         <img class="d-block w-100" src="./images/ipd-crm_CAROUSEL.png" alt="4th slide">
         <div class="carousel-caption d-none d-md-block">
-          <h3 class="slide-note">Discover the most satisfactory means to achieve self actualization in your private and public life</h3>
+          <h3 class="slide-note">Broaden your Professional Horizon, put an icing on the cake of customer relationship</h3>
           <p>.....</p>
           <p>....</p>
           <p>...</p>
