--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
       <div class="carousel-item">
         <img class="d-block w-100" src="./images/ipd-crm_CAROUSEL.png" alt="5th slide">
         <div class="carousel-caption d-none d-md-block">
-          <h3 class="slide-note">Discover the most satisfactory means to achieve self actualization in your private and public life</h3>
+          <h3 class="slide-note">Portray authority and inspire trust with your personality</h3>
           <p>.....</p>
           <p>....</p>
           <p>...</p>
