--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
       <div class="carousel-item">
         <img class="d-block w-100" src="./images/ipd-crm_CAROUSEL.png" alt="6th slide">
         <div class="carousel-caption d-none d-md-block">
-          <h3 class="slide-note">Discover the most satisfactory means to achieve self actualization in your private and public life</h3>
+          <h3 class="slide-note">Belong to a value-added inter-disciplinary professional body</h3>
           <p>.....</p>
           <p>....</p>
           <p>...</p>
