added slide caption

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
       <div class="carousel-item">
         <img class="d-block w-100" src="./images/ipd-crm_CAROUSEL.png" alt="7th slide">
         <div class="carousel-caption d-none d-md-block">
-          <h3 class="slide-note">Discover the most satisfactory means to achieve self actualization in your private and public life</h3>
+          <h3 class="slide-note">Since science cannot replace Humans with Robots in customer relationship... Acquire skills that will make you indispensable in the value-chain</h3>
           <p>.....</p>
           <p>....</p>
           <p>...</p>
