--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
       <div class="carousel-item">
         <img class="d-block w-100" src="./images/ipd-crm_CAROUSEL.png" alt="8th slide">
         <div class="carousel-caption d-none d-md-block">
-          <h3 class="slide-note">Discover the most satisfactory means to achieve self actualization in your private and public life</h3>
+          <h3 class="slide-note">Your academic qualification can take you far... but your acquired life skills and expertise in personality development can take you farther in your life and career</h3>
           <p>.....</p>
           <p>....</p>
           <p>...</p>
