adding react.js footer

--- a/index.html
+++ b/index.html
@@ -168,5 +168,12 @@
   <!-- React.js -->
   <script src="https://unpkg.com/react@16/umd/react.production.min.js" crossorigin></script>
   <script src="https://unpkg.com/react-dom@16/umd/react-dom.production.min.js" crossorigin></script>
+
+  <!-- Babel -->
+  <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
+
+  <!-- footer COMPONENT -->
+  <script src="footer.js"></script>
+
 </body>
 </html>
