--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
   <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
 
   <!-- footer COMPONENT -->
-  <script src="footer.js"></script>
+  <script src="./src/footer.js"></script>
 
 </body>
 </html>
