added footer to website

--- a/pages/application.html
+++ b/pages/application.html
@@ -59,7 +59,7 @@
   <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
 
   <!-- footer COMPONENT -->
-  <script src="./footer.js"></script>
-  
+  <script src="../footer.js"></script>
+
 </body>
 </html>
