--- a/index.html
+++ b/index.html
@@ -7,11 +7,10 @@
   <!-- Author & Description -->
   <meta name="author" content="Usheninte Dangana">
   <meta name="description" content="IPD-CRM | Institute of Personality Development & Customer Relationship Management. Customer Relationship Personified.">
+  <!-- Stylesheet -->
+  <link rel="stylesheet" type="text/css" href="./css/styles.css" />
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-  <!-- LESSCSS | Stylesheet -->
-  <link rel="stylesheet/less" type="text/css" href="./css/styles.less" />
-  <script src="//cdnjs.cloudflare.com/ajax/libs/less.js/3.9.0/less.min.js" ></script>
   <title>IPD-CRM | Institute of Personality Development & Customer Relationship 
   Management</title>
 </head>
@@ -158,7 +157,13 @@
 
   <!-- Content -->
 
-  
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col">
+        <h2 class="title">Introduction</h2>
+      </div>
+    </div>
+  </div>
 
   <!-- Footer -->
 
