--- a/index.html
+++ b/index.html
@@ -165,6 +165,21 @@
     </div>
   </div>
 
+  <div class="container-fluid block">
+    <div class="row justify-content-center">
+      <div class="col col-md">
+        <p>The institute</p>
+      </div>
+
+      <div class="col col-md">
+        <blockquote>
+          <p>"The response you get is your true communication"</p>
+          <p>~ Robert Kiyosaki</p>
+        </blockquote>
+      </div>
+    </div>
+  </div>
+
   <!-- Footer -->
 
   <div id="footer_container"></div>
