edited html & css

--- a/index.html
+++ b/index.html
@@ -167,15 +167,20 @@
 
   <div class="container-fluid block">
     <div class="row justify-content-center">
-      <div class="col col-md">
-        <p>The institute</p>
+      <div class="col col-lg">
+        <p>The Institute of Personality Development (PD) and Customer Relationship Management (CRM) is a professional by established in a quest to bring about synergy between personality development and customer relationship management.</p>
+        <p>Somewhere out there lies the key to inreased sales, an edge over the competitor (regardless of the industry), Institutional reputation, Corporate/Individual integrity, Strong brand equity, Customers retention, eletoral victories, personality favorability, built relationships, increased parishioners, Corporate sustainable growth and development</p>
+        <p>Thus, the Institute of Personality Development and Customer Relationship Management (IPD-CRM) has developed a body of knowledge, skills and abilities that will enhance customer relationship delivery, leveraging on individual's personality development. This is because you are a key person to the success of your organisation relations with customers, electorates, clients, etc. You are the bridge between the customer/people and the problems, between the cutomer/people and the sales objectives. Your most important goal is to satisfy or even delight the customer, client or stakeholder, and your TOTAL PERSONALITY will play major role in developing and sustaining this goal.</p>
       </div>
 
-      <div class="col col-md">
-        <blockquote>
-          <p>"The response you get is your true communication"</p>
+      <div class="col col-lg">
+        <blockquote id="quote">
+          <p>"The response you get</p>
+          <p>is your true communication"</p>
           <p>~ Robert Kiyosaki</p>
         </blockquote>
+        <p>Statistics show that in the first thirty seconds of meeting someone you determine at least three importnant factors concerning the person in question. (1) Socio-economic status, (2) Educational level, and (3) Desirability or how you wish ton relate with him/her.</p>
+        <p>The imperative of this finding is that there shuld be a "liking" for a personality before the person can make any significant impact in Customer Relationship delivery, Speech delivery or general positive impression on others that could drive meaningful discussion, association or relationship.</p>
       </div>
     </div>
   </div>
