--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
           <p>is your true communication"</p>
           <p>~ Robert Kiyosaki</p>
         </blockquote>
-        <p>Statistics show that in the first thirty seconds of meeting someone you determine at least three importnant factors concerning the person in question. (1) Socio-economic status, (2) Educational level, and (3) Desirability or how you wish ton relate with him/her.</p>
+        <p>Statistics show that in the first thirty seconds of meeting someone you determine at least three importnant factors concerning the person in question. (1) Socio-economic status, (2) Educational level, and (3) Desirability or how you wish to relate to him/her.</p>
         <p>The imperative of this finding is that there shuld be a "liking" for a personality before the person can make any significant impact in Customer Relationship delivery, Speech delivery or general positive impression on others that could drive meaningful discussion, association or relationship.</p>
       </div>
     </div>
