--- a/pages/corporate-profile.html
+++ b/pages/corporate-profile.html
@@ -41,6 +41,16 @@
     </div>
   </nav>
 
+  <!-- Content -->
+
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col">
+        <h2 class="title">Corporate Profile</h2>
+      </div>
+    </div>
+  </div>
+
   <!-- Footer -->
 
   <div id="footer_container"></div>
