--- a/pages/corporate-profile.html
+++ b/pages/corporate-profile.html
@@ -51,6 +51,16 @@
     </div>
   </div>
 
+  <div class="container-fluid block">
+    <div class="row justify-content-center">
+      <div class="col-lg"></div>
+      <div class="col col-lg">
+        <p>The Institute of Personality Development and Customer Relationship Management (IPD-CRM) Nigeria [Member, International Council of Customer Service Orgainzation and World Personality Development Council] is a service oriented; professionally acknowledged regulatory body registered under the Copnaies and Allied Matters Act 1990. IPD-CRM is also duly registered with Corporate Affairs Commission and fully approved by the Federal ministry of Education and Federal Minstry of Justice, Nigeria respectively.</p>
+      </div>
+      <div class="col-lg"></div>
+    </div>
+  </div>
+
   <!-- Footer -->
 
   <div id="footer_container"></div>
