--- a/pages/corporate-profile.html
+++ b/pages/corporate-profile.html
@@ -61,6 +61,28 @@
     </div>
   </div>
 
+
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col">
+        <h2 class="title">Operational Terms</h2>
+      </div>
+    </div>
+  </div>
+
+  <div class="container-fluid block">
+    <div class="row justify-content-center">
+      <div class="col col-lg">
+        <ol type="i" style="font-weight: bold"><li>Personality Development:</li></ol>
+        <p></p>
+      </div>
+      <div class="col col-lg">
+        <ol type="i" start="2" style="font-weight: bold"><li>Customer Relationship Management:</li></ol>
+        <p></p>
+      </div>
+    </div>
+  </div>
+
   <!-- Footer -->
 
   <div id="footer_container"></div>
