--- a/pages/corporate-profile.html
+++ b/pages/corporate-profile.html
@@ -74,10 +74,12 @@
     <div class="row justify-content-center">
       <div class="col col-lg">
         <ol type="i" style="font-weight: bold"><li>Personality Development:</li></ol>
-        <p></p>
+        <p>The development of organized pattern of behaviors and attitudes that make a person distinctive. It is an enduring pattern or thoughts, fellings and behaviors that distinguishes individuals from one another. It is becoming a better person of yourself with Intergrity, Excellence and Professionalism as your collateral.</p>
+        <p>Personality development helps individuals to inspire others to follow him/her as a leader; to live with a positive attitude towards like and reducess stress ... Such a winning percweption helps individuals navigate through life;s possibilities and opportunities for personal, community, national and or global development.</p>
       </div>
       <div class="col col-lg">
         <ol type="i" start="2" style="font-weight: bold"><li>Customer Relationship Management:</li></ol>
+        <p></p>
         <p></p>
       </div>
     </div>
