--- a/index.html
+++ b/index.html
@@ -43,116 +43,122 @@
 
   <!-- Carousel -->
 
-  <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-    <ol class="carousel-indicators">
-      <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-      <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-      <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-      <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
-      <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
-      <li data-target="#carouselExampleIndicators" data-slide-to="5"></li>
-      <li data-target="#carouselExampleIndicators" data-slide-to="6"></li>
-      <li data-target="#carouselExampleIndicators" data-slide-to="7"></li>
-      <li data-target="#carouselExampleIndicators" data-slide-to="8"></li>
-    </ol>
-    <div class="carousel-inner">
-      <div class="carousel-item active">
-        <img class="d-block w-100" src="./images/ipd-crm_CAROUSEL.png" alt="1st slide">
-        <div class="carousel-caption d-none d-md-block">
-          <h3 class="slide-note">Discover the most satisfactory means to achieve self actualization in your private and public life</h3>
-          <p>.....</p>
-          <p>....</p>
-          <p>...</p>
-          <p>..</p>
-          <p>.</p>
-        </div>
-      </div>
-      <div class="carousel-item">
-        <img class="d-block w-100" src="./images/ipd-crm_CAROUSEL.png" alt="2nd slide">
-        <div class="carousel-caption d-none d-md-block">
-          <h3 class="slide-note">Discover the hidden aspect of your personality, accelerate success and popularity</h3>
-          <p>.....</p>
-          <p>....</p>
-          <p>...</p>
-          <p>..</p>
-          <p>.</p>
-        </div>
-      </div>
-      <div class="carousel-item">
-        <img class="d-block w-100" src="./images/ipd-crm_CAROUSEL.png" alt="3rd slide">
-        <div class="carousel-caption d-none d-md-block">
-          <h3 class="slide-note">Bridge the gap between your person and customer service delivery</h3>
-          <p>.....</p>
-          <p>....</p>
-          <p>...</p>
-          <p>..</p>
-          <p>.</p>
-        </div>
-      </div>
-      <div class="carousel-item">
-        <img class="d-block w-100" src="./images/ipd-crm_CAROUSEL.png" alt="4th slide">
-        <div class="carousel-caption d-none d-md-block">
-          <h3 class="slide-note">Broaden your Professional Horizon, put an icing on the cake of customer relationship</h3>
-          <p>.....</p>
-          <p>....</p>
-          <p>...</p>
-          <p>..</p>
-          <p>.</p>
-        </div>
-      </div>
-      <div class="carousel-item">
-        <img class="d-block w-100" src="./images/ipd-crm_CAROUSEL.png" alt="5th slide">
-        <div class="carousel-caption d-none d-md-block">
-          <h3 class="slide-note">Portray authority and inspire trust with your personality</h3>
-          <p>.....</p>
-          <p>....</p>
-          <p>...</p>
-          <p>..</p>
-          <p>.</p>
-        </div>
-      </div>
-      <div class="carousel-item">
-        <img class="d-block w-100" src="./images/ipd-crm_CAROUSEL.png" alt="6th slide">
-        <div class="carousel-caption d-none d-md-block">
-          <h3 class="slide-note">Belong to a value-added inter-disciplinary professional body</h3>
-          <p>.....</p>
-          <p>....</p>
-          <p>...</p>
-          <p>..</p>
-          <p>.</p>
-        </div>
-      </div>
-      <div class="carousel-item">
-        <img class="d-block w-100" src="./images/ipd-crm_CAROUSEL.png" alt="7th slide">
-        <div class="carousel-caption d-none d-md-block">
-          <h3 class="slide-note">Since science cannot replace Humans with Robots in customer relationship... Acquire skills that will make you indispensable in the value-chain</h3>
-          <p>.....</p>
-          <p>....</p>
-          <p>...</p>
-          <p>..</p>
-          <p>.</p>
-        </div>
-      </div>
-      <div class="carousel-item">
-        <img class="d-block w-100" src="./images/ipd-crm_CAROUSEL.png" alt="8th slide">
-        <div class="carousel-caption d-none d-md-block">
-          <h3 class="slide-note">Your academic qualification can take you far... but your acquired life skills and expertise in personality development can take you farther in your life and career</h3>
-          <p>.....</p>
-          <p>....</p>
-          <p>...</p>
-          <p>..</p>
-          <p>.</p>
+  <div class="container-fluid d-none d-sm-none d-md-block">
+    <div class="row">
+      <div class="col-lg">
+        <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+          <ol class="carousel-indicators">
+            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="5"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="6"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="7"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="8"></li>
+          </ol>
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img class="d-block w-100" src="./images/ipd-crm_CAROUSEL.png" alt="1st slide">
+              <div class="carousel-caption d-none d-md-block">
+                <h3 class="slide-note">Discover the most satisfactory means to achieve self actualization in your private and public life</h3>
+                <p>.....</p>
+                <p>....</p>
+                <p>...</p>
+                <p>..</p>
+                <p>.</p>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img class="d-block w-100" src="./images/ipd-crm_CAROUSEL.png" alt="2nd slide">
+              <div class="carousel-caption d-none d-md-block">
+                <h3 class="slide-note">Discover the hidden aspect of your personality, accelerate success and popularity</h3>
+                <p>.....</p>
+                <p>....</p>
+                <p>...</p>
+                <p>..</p>
+                <p>.</p>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img class="d-block w-100" src="./images/ipd-crm_CAROUSEL.png" alt="3rd slide">
+              <div class="carousel-caption d-none d-md-block">
+                <h3 class="slide-note">Bridge the gap between your person and customer service delivery</h3>
+                <p>.....</p>
+                <p>....</p>
+                <p>...</p>
+                <p>..</p>
+                <p>.</p>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img class="d-block w-100" src="./images/ipd-crm_CAROUSEL.png" alt="4th slide">
+              <div class="carousel-caption d-none d-md-block">
+                <h3 class="slide-note">Broaden your Professional Horizon, put an icing on the cake of customer relationship</h3>
+                <p>.....</p>
+                <p>....</p>
+                <p>...</p>
+                <p>..</p>
+                <p>.</p>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img class="d-block w-100" src="./images/ipd-crm_CAROUSEL.png" alt="5th slide">
+              <div class="carousel-caption d-none d-md-block">
+                <h3 class="slide-note">Portray authority and inspire trust with your personality</h3>
+                <p>.....</p>
+                <p>....</p>
+                <p>...</p>
+                <p>..</p>
+                <p>.</p>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img class="d-block w-100" src="./images/ipd-crm_CAROUSEL.png" alt="6th slide">
+              <div class="carousel-caption d-none d-md-block">
+                <h3 class="slide-note">Belong to a value-added inter-disciplinary professional body</h3>
+                <p>.....</p>
+                <p>....</p>
+                <p>...</p>
+                <p>..</p>
+                <p>.</p>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img class="d-block w-100" src="./images/ipd-crm_CAROUSEL.png" alt="7th slide">
+              <div class="carousel-caption d-none d-md-block">
+                <h3 class="slide-note">Since science cannot replace Humans with Robots in customer relationship... Acquire skills that will make you indispensable in the value-chain</h3>
+                <p>.....</p>
+                <p>....</p>
+                <p>...</p>
+                <p>..</p>
+                <p>.</p>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img class="d-block w-100" src="./images/ipd-crm_CAROUSEL.png" alt="8th slide">
+              <div class="carousel-caption d-none d-md-block">
+                <h3 class="slide-note">Your academic qualification can take you far... but your acquired life skills and expertise in personality development can take you farther in your life and career</h3>
+                <p>.....</p>
+                <p>....</p>
+                <p>...</p>
+                <p>..</p>
+                <p>.</p>
+              </div>
+            </div>
+          </div>
+          <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+          </a>
+          <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+          </a>
         </div>
       </div>
     </div>
-    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="sr-only">Previous</span>
-    </a>
-    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="sr-only">Next</span>
-    </a>
   </div>
 
   <!-- Content -->
@@ -168,7 +174,7 @@
   <div class="container-fluid block">
     <div class="row justify-content-center">
       <div class="col col-lg">
-        <p>The Institute of Personality Development (PD) and Customer Relationship Management (CRM) is a professional by established in a quest to bring about synergy between personality development and customer relationship management.</p>
+        <p>The Institute of Personality Development (PD) and Customer Relationship Management (CRM) is a professional body established in a quest to bring about synergy between personality development and customer relationship management.</p>
         <p>Somewhere out there lies the key to inreased sales, an edge over the competitor (regardless of the industry), Institutional reputation, Corporate/Individual integrity, Strong brand equity, Customers retention, eletoral victories, personality favorability, built relationships, increased parishioners, Corporate sustainable growth and development</p>
         <p>Thus, the Institute of Personality Development and Customer Relationship Management (IPD-CRM) has developed a body of knowledge, skills and abilities that will enhance customer relationship delivery, leveraging on individual's personality development. This is because you are a key person to the success of your organisation relations with customers, electorates, clients, etc. You are the bridge between the customer/people and the problems, between the cutomer/people and the sales objectives. Your most important goal is to satisfy or even delight the customer, client or stakeholder, and your TOTAL PERSONALITY will play major role in developing and sustaining this goal.</p>
       </div>
