--- a/index.html
+++ b/index.html
@@ -35,6 +35,12 @@
           <a class="nav-link" href="./pages/vision-and-mission.html">Vision & Mission</a>
         </li>
         <li class="nav-item">
+          <a class="nav-link" href="./pages/membership.html">Membership</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="./pages/membership-types.html">Membership Types</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link" href="./pages/application.html">Application</a>
         </li>
       </ul>
