--- a/pages/corporate-profile.html
+++ b/pages/corporate-profile.html
@@ -35,6 +35,12 @@
           <a class="nav-link" href="./vision-and-mission.html">Vision & Mission</a>
         </li>
         <li class="nav-item">
+          <a class="nav-link" href="./membership.html">Membership</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="./membership-types.html">Membership Types</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link" href="./application.html">Application</a>
         </li>
       </ul>
