added to operational terms

--- a/pages/corporate-profile.html
+++ b/pages/corporate-profile.html
@@ -85,8 +85,9 @@
       </div>
       <div class="col col-lg">
         <ol type="i" start="2" style="font-weight: bold"><li>Customer Relationship Management:</li></ol>
-        <p></p>
-        <p></p>
+        <p>The technique of establishing and maintaining a long-term business or social relationship with your customers or relevant people or persons in the society or organization.</p>
+        <p>CUSTOMERS here refer to specific individuals, groups, organizations, Religious or CUltural groups, Government at all levels - Federal, State, Local; Government Agencies, Non-Governmental Organizations, Electorates, Politial Parties, Media, Consumers and Users of goods, services and ideas.</p>
+        <p>This customer-focused business model also goes by the names <code>Relationship Marketing</code>, <code>Real-Time Marketing</code>, <code>One-to-One Marketing</code> and/or <code>Customer Intimacy</code>. Irrespective of the name, the idea is the same: Establish relationships with customers / relevant people on an individual basis, and then use the information you gather to treat different customers / people differently with your knowledge of Personality Dimension.</p>
       </div>
     </div>
   </div>
