--- a/pages/membership-types.html
+++ b/pages/membership-types.html
@@ -8,7 +8,7 @@
   <meta name="author" content="Usheninte Dangana">
   <meta name="description" content="IPD-CRM | Institute of Personality Development & Customer Relationship Management. Customer Relationship Personified.">
   <!-- Stylesheet -->
-  <link rel="stylesheet" type="text/css" href="./css/styles.css" />
+  <link rel="stylesheet" type="text/css" href="../css/styles.css" />
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <title>IPD-CRM | Institute of Personality Development & Customer Relationship 
