--- a/pages/vision-and-mission.html
+++ b/pages/vision-and-mission.html
@@ -8,7 +8,7 @@
   <meta name="author" content="Usheninte Dangana">
   <meta name="description" content="IPD-CRM | Institute of Personality Development & Customer Relationship Management. Customer Relationship Personified.">
   <!-- Stylesheet -->
-  <link rel="stylesheet" type="text/css" href="./css/styles.css" />
+  <link rel="stylesheet" type="text/css" href="../css/styles.css" />
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <title>IPD-CRM | Institute of Personality Development & Customer Relationship 
@@ -47,6 +47,29 @@
     </div>
   </nav>
 
+  <!-- Content -->
+
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col">
+        <h2 class="title">Vision & Mission</h2>
+      </div>
+    </div>
+  </div>
+
+  <div class="container-fluid block">
+    <div class="row justify-content-center">
+      <div class="col col-lg">
+        <ul style="font-weight: bold; list-style-type: none"><li>Personality Development:</li></ul>
+        <p></p>
+      </div>
+      <div class="col col-lg">
+        <ul style="font-weight: bold; list-style-type: none"><li>Customer Relationship Management:</li></ul>
+        <p></p>
+      </div>
+    </div>
+  </div>
+  
   <!-- Footer -->
 
   <div id="footer_container"></div>
