added vision & mission

--- a/pages/vision-and-mission.html
+++ b/pages/vision-and-mission.html
@@ -59,13 +59,13 @@
 
   <div class="container-fluid block">
     <div class="row justify-content-center">
-      <div class="col col-lg">
-        <ul style="font-weight: bold; list-style-type: none"><li>Personality Development:</li></ul>
-        <p></p>
+      <div class="col-12 col-lg">
+        <ul style="font-weight: bold; list-style-type: none"><li>Vision</li></ul>
+        <p>To be a global repository in Personality Dimension Strategy, a preferred organization, expanding the frontiers of personality development as an indispensible vehicle of excellence in driving human / Customer Relationship management for sustainable growth and development.</p>
       </div>
-      <div class="col col-lg">
-        <ul style="font-weight: bold; list-style-type: none"><li>Customer Relationship Management:</li></ul>
-        <p></p>
+      <div class="col-12 col-lg">
+        <ul style="font-weight: bold; list-style-type: none"><li>Mission</li></ul>
+        <p>To raise on a sustainable level, a high caliber of inidividuals with distinctive winning perosnalities, using cutting edge strategies in soft and life skills; and positive behaviors to influence their environment and every huan and corporate engagement for mutual benefit and human capaciy and national development.</p>
       </div>
     </div>
   </div>
