--- a/pages/corporate-profile.html
+++ b/pages/corporate-profile.html
@@ -77,12 +77,12 @@
 
   <div class="container-fluid block">
     <div class="row justify-content-center">
-      <div class="col col-lg">
+      <div class="col-12 col-lg">
         <ol type="i" style="font-weight: bold"><li>Personality Development:</li></ol>
         <p>The development of organized pattern of behaviors and attitudes that make a person distinctive. It is an enduring pattern or thoughts, fellings and behaviors that distinguishes individuals from one another. It is becoming a better person of yourself with Intergrity, Excellence and Professionalism as your collateral.</p>
         <p>Personality development helps individuals to inspire others to follow him/her as a leader; to live with a positive attitude towards like and reducess stress ... Such a winning percweption helps individuals navigate through life;s possibilities and opportunities for personal, community, national and or global development.</p>
       </div>
-      <div class="col col-lg">
+      <div class="col-12 col-lg">
         <ol type="i" start="2" style="font-weight: bold"><li>Customer Relationship Management:</li></ol>
         <p>The technique of establishing and maintaining a long-term business or social relationship with your customers or relevant people or persons in the society or organization.</p>
         <p>CUSTOMERS here refer to specific individuals, groups, organizations, Religious or CUltural groups, Government at all levels - Federal, State, Local; Government Agencies, Non-Governmental Organizations, Electorates, Politial Parties, Media, Consumers and Users of goods, services and ideas.</p>
