--- a/pages/vision-and-mission.html
+++ b/pages/vision-and-mission.html
@@ -82,12 +82,12 @@
     <div class="row justify-content-center">
       <div class="col-12 col-lg">
         <ol type="i">
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
+          <li>To build memebers with winning personalities and poise: members who will exude positive confidence, inspire trust, portray authority, command respect, project personal power, sociable and personable.</li>
+          <li>To develop, equip and hone members' porficiency in the development of unique soft and life skills, neccessary for human capacity development and organisational sustainability.</li>
+          <li>To bridge the gap between personality development and customer relationship management for Organisational ana National progress.</li>
+          <li>To keep members constantly abreast of best practices in the field of personality development and customer relationship management.</li>
           <li>
-            ... :
+            To equip members with the following abilities and capabilities:
             <ul>
               <li></li>
               <li></li>
