--- a/pages/vision-and-mission.html
+++ b/pages/vision-and-mission.html
@@ -89,16 +89,16 @@
           <li>
             To equip members with the following abilities and capabilities:
             <ul>
-              <li></li>
-              <li></li>
-              <li></li>
-              <li></li>
-              <li></li>
-              <li></li>
-              <li></li>
+              <li>Impression mamagement capabilities (Dress Sense)</li>
+              <li>Influence others positively for higher productivity</li>
+              <li>Ability to optimize team performance, narrow gaps and differences</li>
+              <li>Ability to understand customer relationship challenges and proffer recovery process</li>
+              <li>Project postive confidence in business and social, religious and cultural circles</li>
+              <li>Practice thoughtful manners for personal development and organizational growth</li>
+              <li>Manage others more efficiently and delegate tasks more appropriately</li>
             </ul>
           </li>
-          <li></li>
+          <li>Power-up non-verbal skills and optimize communication and impression management capabilities.</li>
         </ol>
       </div>
       <div class="col-12 col-lg">
