--- a/pages/vision-and-mission.html
+++ b/pages/vision-and-mission.html
@@ -103,14 +103,14 @@
       </div>
       <div class="col-12 col-lg">
         <ol type="i" start="7">
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
+          <li>To examine and license career oriented inidividuals (Accountant, journalist, PR Practitioner, Lecturer/Academician, Teacher, Clergy, Politician, Engineer, banker etc) in becoming a professional PD-CR Manager.</li>
+          <li>To develop and constantly research and create a body of knowledge and innovative solutions that are prcative to the dynamic needs of our members and our areas of influence.</li>
+          <li>To inculcate high level of professional discipline amongst members in the discharge of their responsibilites in their respective organizations, vocations and careers.</li>
+          <li>To formulate and regulate policies that will promote the practice of Personal Development and Customer Relationship Management.</li>
+          <li>To promote standards taht will enhance and sustain excellent Customer Relations through the instrumenttion of strategic personality development management.</li>
+          <li>To publish Research Works / Books, Newsletters, Pamphlets, Magazines etc in pursuit of professional excellence.</li>
+          <li>To promote the lofty ideas of IPD-CRM, Nigeria, in the media; print, electronics, social etc to further the stated objectives / professional learning outcomes of the Institute.</li>
+          <li>To brand a member with professional image that will complement his or her professional competence.</li>
         </ol>
       </div>
     </div>
