added benefits of membership

--- a/pages/membership.html
+++ b/pages/membership.html
@@ -63,7 +63,11 @@
       <div class="col-lg"></div>
       <div class="col col-lg-8">
         <ol>
-          <li></li>
+          <li>Members shall become professional Personlity Development and Customer Relationship Managers.</li>
+          <li>Since the institue is an inter-disciplinary one that cuts across all other professional membership, being a member of IPD-CRM will enhace career growth and performance.</li>
+          <li>For relativrly fresh graduates on Associate membership grade, membership of IPD-CRM will expose them to various strategic options in personality dimension and customer relationship management; creating ready made, employable graduates with winning personalities that meet the expectations of the industry.</li>
+          <li>Provides the opportunity to meet Intellectuals, Politicians, Top Civil Servants, Diplomats, bankers, Engineers, Religious Leaders and Cultural Ambassadors, and PROFESSIONAL people from all walks of life.</li>
+          <li>Members shall be invited to Seminars, Workshops, Conferences, Lectures (etc) from time to time. A platform that will engender sharing of innovative and current ideas for continuing professional development.</li>
         </ol>
       </div>
       <div class="col-lg"></div>
