added memberships details

--- a/pages/membership.html
+++ b/pages/membership.html
@@ -87,6 +87,7 @@
     <div class="row justify-content-center">
       <div class="col-lg"></div>
       <div class="col col-lg-8">
+        <p>As an institute that is inter-disciplinary in nature, membership is opened to individuals or persons in either public or private establishments, religious and political organisations, who desire to acquire winning personalities for profitable and mutually beneficial huma, coprporate/organisational and customer relationship.</p>
         <ol>
           <li></li>
         </ol>
