added membership type

--- a/pages/membership-types.html
+++ b/pages/membership-types.html
@@ -122,9 +122,9 @@
           <li>A graduate of Ten (10) years and above.</li>
           <li>Must have spent five (5) years as a Full member of IPD-CRM.</li>
           <li>Top Executives with experience: Chairman, MD, CEO / GM or Director with resposibility for managing Individuals or Corporate Relationshp at top management level.</li>
-          <li></li>
-          <li></li>
-          <li></li>
+          <li>Possess higher degress (eg. Ph./Professor) and/or be a fellow of reputable professional bodies.</li>
+          <li>Politician at the level of Party Chairman, President, Leader, Governor, Senator, House of Representative member, Minister, Director General, Leadership of State House of Assembly, etc.</li>
+          <li>Religious/Cultural leaders at the level of Senior Pastor, General Overseer, Bishop, Imam, Sheik, Cultural Ambassador, etc.</li>
         </ol>
       </div>
       <div class="col-lg"></div>
