added membership type

--- a/pages/membership-types.html
+++ b/pages/membership-types.html
@@ -134,7 +134,7 @@
   <div class="container-fluid">
     <div class="row">
       <div class="col">
-        <h2 class="title">Membership</h2>
+        <h2 class="title">Corporate Membership</h2>
       </div>
     </div>
   </div>
@@ -143,11 +143,7 @@
     <div class="row justify-content-center">
       <div class="col-lg"></div>
       <div class="col col-lg-8">
-        <p></p>
-        <p></p>
-        <ol type="i">
-          <li></li>
-        </ol>
+        <p>Corporate Membership is meant for organizations, Political Parties, Firms, Componanies, Religious Organisations and NGOs that are involved in managing human relationships, and customer service delivery.</p>
       </div>
       <div class="col-lg"></div>
     </div>
