--- a/pages/application.html
+++ b/pages/application.html
@@ -50,27 +50,40 @@
   <!-- Content -->
 
   <div class="container-fluid">
-      <div class="row">
-        <div class="col">
-          <h2 class="title">Mode of Application</h2>
-        </div>
+    <div class="row">
+      <div class="col">
+        <h2 class="title">Mode of Application</h2>
       </div>
     </div>
-  
-    <div class="container-fluid block">
-      <div class="row justify-content-center">
-        <div class="col-lg"></div>
-        <div class="col col-lg-8">
-          <p></p>
-          <p></p>
-          <ol type="i">
-            <li></li>
-          </ol>
-        </div>
-        <div class="col-lg"></div>
-      </div>
-    </div>  
+  </div>
 
+  <div class="container-fluid block">
+    <div class="row justify-content-center">
+      <div class="col-lg"></div>
+      <div class="col col-lg-8">
+        <p>Interested Prospective members can obtain the Application Form at the Institute's Corporate Office & Training Hub: <b>15B Oba Olagbegi Avenue, Old Bodija, Off Oshuntokun Street, Ibadan Oyo State, Nigeria</b> or any of the Institute's representative offices, nationwide. The application form is ₦5,0000 (Five Thousand Naira Only).</p>
+        <p>Application form should be properly filled and submitted, with photocopies of the applicant's credentials to the Registrar at the coprporate office.</p>
+      </div>
+      <div class="col-lg"></div>
+    </div>
+  </div>  
+
+  <!-- Button = LEARN MORE -->
+
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col title">
+        <a
+          href="../index.html"
+          target="_blank"
+          rel="noopener noreferrer"
+        >
+          <button type="button" class="btn btn-info">BACK HOME</button>
+        </a>
+      </div>
+    </div>
+  </div>
+      
   <!-- Footer -->
 
   <div id="footer_container"></div>
