--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
     <div class="row justify-content-center">
       <div class="col col-lg">
         <p>The Institute of Personality Development (PD) and Customer Relationship Management (CRM) is a professional body established in a quest to bring about synergy between personality development and customer relationship management.</p>
-        <p>Somewhere out there lies the key to inreased sales, an edge over the competitor (regardless of the industry), Institutional reputation, Corporate/Individual integrity, Strong brand equity, Customers retention, eletoral victories, personality favorability, built relationships, increased parishioners, Corporate sustainable growth and development</p>
+        <p>Somewhere out there lies the key to inreased sales, an edge over the competitor (regardless of the industry), Institutional reputation, Corporate/Individual integrity, Strong brand equity, Customers retention, electoral victories, personality favorability, built relationships, increased parishioners, Corporate sustainable growth and development.</p>
         <p>Thus, the Institute of Personality Development and Customer Relationship Management (IPD-CRM) has developed a body of knowledge, skills and abilities that will enhance customer relationship delivery, leveraging on individual's personality development. This is because you are a key person to the success of your organisation relations with customers, electorates, clients, etc. You are the bridge between the customer/people and the problems, between the cutomer/people and the sales objectives. Your most important goal is to satisfy or even delight the customer, client or stakeholder, and your TOTAL PERSONALITY will play major role in developing and sustaining this goal.</p>
       </div>
 
