--- a/pages/corporate-profile.html
+++ b/pages/corporate-profile.html
@@ -80,12 +80,12 @@
       <div class="col-12 col-lg">
         <ol type="i" style="font-weight: bold"><li>Personality Development:</li></ol>
         <p>The development of organized pattern of behaviors and attitudes that make a person distinctive. It is an enduring pattern or thoughts, fellings and behaviors that distinguishes individuals from one another. It is becoming a better person of yourself with Intergrity, Excellence and Professionalism as your collateral.</p>
-        <p>Personality development helps individuals to inspire others to follow him/her as a leader; to live with a positive attitude towards like and reducess stress ... Such a winning percweption helps individuals navigate through life;s possibilities and opportunities for personal, community, national and or global development.</p>
+        <p>Personality development helps individuals to inspire others to follow him/her as a leader; to live with a positive attitude towards like and reducess stress ... Such a winning perception helps individuals navigate through life's possibilities and opportunities for personal, community, national and or global development.</p>
       </div>
       <div class="col-12 col-lg">
         <ol type="i" start="2" style="font-weight: bold"><li>Customer Relationship Management:</li></ol>
         <p>The technique of establishing and maintaining a long-term business or social relationship with your customers or relevant people or persons in the society or organization.</p>
-        <p>CUSTOMERS here refer to specific individuals, groups, organizations, Religious or CUltural groups, Government at all levels - Federal, State, Local; Government Agencies, Non-Governmental Organizations, Electorates, Politial Parties, Media, Consumers and Users of goods, services and ideas.</p>
+        <p>CUSTOMERS here refer to specific individuals, groups, organizations, Religious or Cultural groups, Government at all levels - Federal, State, Local; Government Agencies, Non-Governmental Organizations, Electorates, Politial Parties, Media, Consumers and Users of goods, services and ideas.</p>
         <p>This customer-focused business model also goes by the names <code>Relationship Marketing</code>, <code>Real-Time Marketing</code>, <code>One-to-One Marketing</code> and/or <code>Customer Intimacy</code>. Irrespective of the name, the idea is the same: Establish relationships with customers / relevant people on an individual basis, and then use the information you gather to treat different customers / people differently with your knowledge of Personality Dimension.</p>
       </div>
     </div>
