--- a/pages/vision-and-mission.html
+++ b/pages/vision-and-mission.html
@@ -65,7 +65,7 @@
       </div>
       <div class="col-12 col-lg">
         <ul style="font-weight: bold; list-style-type: none"><li>Mission</li></ul>
-        <p>To raise on a sustainable level, a high caliber of inidividuals with distinctive winning perosnalities, using cutting edge strategies in soft and life skills; and positive behaviors to influence their environment and every huan and corporate engagement for mutual benefit and human capaciy and national development.</p>
+        <p>To raise on a sustainable level, a high caliber of inidividuals with distinctive winning personalities, using cutting edge strategies in soft and life skills; and positive behaviors to influence their environment and every human and corporate engagement for mutual benefit and human capaciy and national development.</p>
       </div>
     </div>
   </div>
@@ -89,7 +89,7 @@
           <li>
             To equip members with the following abilities and capabilities:
             <ul>
-              <li>Impression mamagement capabilities (Dress Sense)</li>
+              <li>Impression management capabilities (Dress Sense)</li>
               <li>Influence others positively for higher productivity</li>
               <li>Ability to optimize team performance, narrow gaps and differences</li>
               <li>Ability to understand customer relationship challenges and proffer recovery process</li>
@@ -103,11 +103,11 @@
       </div>
       <div class="col-12 col-lg">
         <ol type="i" start="7">
-          <li>To examine and license career oriented inidividuals (Accountant, journalist, PR Practitioner, Lecturer/Academician, Teacher, Clergy, Politician, Engineer, banker etc) in becoming a professional PD-CR Manager.</li>
-          <li>To develop and constantly research and create a body of knowledge and innovative solutions that are prcative to the dynamic needs of our members and our areas of influence.</li>
+          <li>To examine and license career oriented inidividuals (Accountant, Journalist, PR Practitioner, Lecturer/Academician, Teacher, Clergy, Politician, Engineer, Banker etc) in becoming a professional PD-CR Manager.</li>
+          <li>To develop and constantly research and create a body of knowledge and innovative solutions that are proactive to the dynamic needs of our members and our areas of influence.</li>
           <li>To inculcate high level of professional discipline amongst members in the discharge of their responsibilites in their respective organizations, vocations and careers.</li>
           <li>To formulate and regulate policies that will promote the practice of Personal Development and Customer Relationship Management.</li>
-          <li>To promote standards taht will enhance and sustain excellent Customer Relations through the instrumenttion of strategic personality development management.</li>
+          <li>To promote standards that will enhance and sustain excellent Customer Relations through the instrumenttion of strategic personality development management.</li>
           <li>To publish Research Works / Books, Newsletters, Pamphlets, Magazines etc in pursuit of professional excellence.</li>
           <li>To promote the lofty ideas of IPD-CRM, Nigeria, in the media; print, electronics, social etc to further the stated objectives / professional learning outcomes of the Institute.</li>
           <li>To brand a member with professional image that will complement his or her professional competence.</li>
