--- a/pages/membership.html
+++ b/pages/membership.html
@@ -64,9 +64,9 @@
       <div class="col col-lg-8">
         <ol>
           <li>Members shall become professional Personlity Development and Customer Relationship Managers.</li>
-          <li>Since the institue is an inter-disciplinary one that cuts across all other professional membership, being a member of IPD-CRM will enhace career growth and performance.</li>
+          <li>Since the institute is an inter-disciplinary one that cuts across all other professional membership, being a member of IPD-CRM will enhace career growth and performance.</li>
           <li>For relativrly fresh graduates on Associate membership grade, membership of IPD-CRM will expose them to various strategic options in personality dimension and customer relationship management; creating ready made, employable graduates with winning personalities that meet the expectations of the industry.</li>
-          <li>Provides the opportunity to meet Intellectuals, Politicians, Top Civil Servants, Diplomats, bankers, Engineers, Religious Leaders and Cultural Ambassadors, and PROFESSIONAL people from all walks of life.</li>
+          <li>Provides the opportunity to meet Intellectuals, Politicians, Top Civil Servants, Diplomats, Bankers, Engineers, Religious Leaders and Cultural Ambassadors, and PROFESSIONAL people from all walks of life.</li>
           <li>Members shall be invited to Seminars, Workshops, Conferences, Lectures (etc) from time to time. A platform that will engender sharing of innovative and current ideas for continuing professional development.</li>
         </ol>
       </div>
@@ -86,7 +86,7 @@
     <div class="row justify-content-center">
       <div class="col-lg"></div>
       <div class="col col-lg-8">
-        <p>As an institute that is inter-disciplinary in nature, membership is opened to individuals or persons in either public or private establishments, religious and political organisations, who desire to acquire winning personalities for profitable and mutually beneficial huma, coprporate/organisational and customer relationship.</p>
+        <p>As an institute that is inter-disciplinary in nature, membership is opened to individuals or persons in either public or private establishments, religious and political organisations, who desire to acquire winning personalities for profitable and mutually beneficial human, coprporate/organisational and customer relationship.</p>
         <p>Membership of IPD-CRM, Nigeria is categorized with the following grades:</p>
         <ol type="i">
           <li>Associate Member</li>
